# pymatgen

./: .gitignore  .pre-commit-config.yaml  codecov.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
pymatgen-core/: pyproject.toml  setup.py
pymatgen-core/core/: interface.py  ion.py  lattice.py  sites.py  spectrum.py  structure_matcher.py  surface.py  trajectory.py  xcfunc.py
pymatgen-core/electronic_structure/: boltztrap2.py  cohp.py  dos.py
pymatgen-core/phonon/: dos.py  ir_spectra.py  thermal_displacements.py
pymatgen-core/pymatgen/core/: __init__.py  bond_valence.py  composition.py  interface.py  operations.py  periodic_table.py  structure.py  structure_matcher.py  surface.py  tensors.py  trajectory.py
pymatgen-core/pymatgen/electronic_structure/: bandstructure.py  boltztrap.py  boltztrap2.py  cohp.py  plotter.py
pymatgen-core/pymatgen/phonon/: bandstructure.py  gruneisen.py  plotter.py  thermal_displacements.py
pymatgen-core/pymatgen/symmetry/: analyzer.py  groups.py  kpath.py  maggroups.py  site_symmetries.py  structure.py
pymatgen-core/pymatgen/util/: coord.py  testing.py  typing.py
pymatgen-core/symmetry/: bandstructure.py  settings.py
pymatgen-core/tests/core/: test_bond_valence.py  test_bonds.py  test_composition.py  test_interface.py  test_ion.py  test_lattice.py  test_libxcfunc.py  test_molecular_orbitals.py  test_operations.py  test_periodic_table.py  test_sites.py  test_spectrum.py  test_structure.py  test_structure_matcher.py  test_surface.py  test_tensors.py  test_trajectory.py  test_units.py
pymatgen-core/tests/electronic_structure/: test_bandstructure.py  test_boltztrap.py  test_boltztrap2.py  test_cohp.py  test_core.py  test_dos.py  test_plotter.py
pymatgen-core/tests/phonon/: test_bandstructure.py  test_dos.py  test_gruneisen.py  test_ir_spectra.py  test_thermal_displacements.py
pymatgen-core/tests/symmetry/: test_analyzer.py  test_groups.py  test_kpath_hin.py  test_kpath_lm.py  test_kpath_sc.py  test_kpaths.py  test_maggroups.py  test_settings.py  test_site_symmetries.py
pymatgen-core/tests/util/: test_convergence.py  test_coord.py  test_num.py  test_plotting.py  test_provenance.py  test_string.py  test_typing.py
pymatgen-core/util/: plotting.py
pymatgen-others/analysis/: hhi.py  nmr.py  phase_diagram.py  piezo.py  prototypes.py  quasirrho.py  surface_analysis.py  transition_state.py  wulff.py
pymatgen-others/analysis/elasticity/: strain.py
pymatgen-others/analysis/ferroelectricity/: polarization.py
pymatgen-others/analysis/interfaces/: zsl.py
pymatgen-others/analysis/magnetism/: jahnteller.py
pymatgen-others/analysis/solar/: slme.py
pymatgen-others/analysis/structure_prediction/: volume_predictor.py
pymatgen-others/analysis/topological/: spillage.py
pymatgen-others/apps/battery/: insertion_battery.py
pymatgen-others/apps/borg/: hive.py
pymatgen-others/cli/: pmg_config.py
pymatgen-others/command_line/: enumlib_caller.py
pymatgen-others/entries/: exp_entries.py
pymatgen-others/ext/: cod.py  optimade.py
pymatgen-others/io/: cif.py  cssr.py  fiesta.py  res.py
pymatgen-others/io/abinit/: abiobjects.py  inputs.py
pymatgen-others/io/cp2k/: inputs.py  outputs.py
pymatgen-others/io/feff/: inputs.py  outputs.py
pymatgen-others/io/lammps/: inputs.py
pymatgen-others/io/lobster/: lobsterenv.py
pymatgen-others/io/qchem/: inputs.py  sets.py
pymatgen-others/io/vasp/: sets.py
pymatgen-others/io/xtb/: outputs.py
pymatgen-others/pymatgen/alchemy/: filters.py
pymatgen-others/pymatgen/analysis/: bond_dissociation.py  bond_valence.py  dimensionality.py  graphs.py  molecule_structure_comparator.py  quasiharmonic.py  xps.py
pymatgen-others/pymatgen/cli/: feff_plot_cross_section.py  pmg_structure.py
pymatgen-others/pymatgen/command_line/: chargemol_caller.py  mcsqs_caller.py  vampire_caller.py
pymatgen-others/pymatgen/entries/: compatibility.py  correction_calculator.py
pymatgen-others/pymatgen/io/: adf.py  gaussian.py  shengbte.py  xcrysden.py  xr.py
pymatgen-others/tests/alchemy/: test_materials.py
pymatgen-others/tests/analysis/: test_bond_dissociation.py  test_chempot_diagram.py  test_energy_models.py  test_ewald.py  test_functional_groups.py  test_hhi.py  test_local_env.py  test_piezo_sensitivity.py  test_pourbaix_diagram.py  test_quasiharmonic_debye_approx.py  test_structure_matcher.py
pymatgen-others/tests/command_line/: test_bader_caller.py  test_critic2_caller.py  test_vampire_caller.py
pymatgen-others/tests/ext/: test_matproj.py
pymatgen-others/tests/io/: test_atat.py  test_cif.py  test_core.py  test_gaussian.py  test_lmto.py  test_res.py  test_wannier90.py  test_zeopp.py
pymatgen-others/tests/optimization/: test_linear_assignment.py
pymatgen-others/tests/transformations/: test_advanced_transformations.py
pymatgen-others/transformations/: site_transformations.py
pymatgen-others/vis/: plotters.py  structure_vtk.py
pymatgen-tools/: setup.py
pymatgen-tools/pymatgen/alchemy/: filters.py  materials.py
pymatgen-tools/pymatgen/analysis/: adsorption.py  bond_dissociation.py  bond_valence.py  chempot_diagram.py  cost.py  dimensionality.py  energy_models.py  eos.py  ewald.py  fragmenter.py  graphs.py  interface_reactions.py  local_env.py  molecule_matcher.py  phase_diagram.py  piezo_sensitivity.py  pourbaix_diagram.py  prototypes.py  reaction_calculator.py  structure_analyzer.py  structure_matcher.py  surface_analysis.py  transition_state.py  wulff.py
pymatgen-tools/pymatgen/cli/: pmg.py  pmg_analyze.py  pmg_plot.py  pmg_structure.py
pymatgen-tools/pymatgen/command_line/: bader_caller.py  critic2_caller.py  gulp_caller.py
pymatgen-tools/pymatgen/entries/: __init__.py  compatibility.py  computed_entries.py  entry_tools.py  mixing_scheme.py
pymatgen-tools/pymatgen/ext/: matproj.py  optimade.py
pymatgen-tools/pymatgen/io/: ase.py  atat.py  babel.py  cif.py  common.py  gaussian.py  lmto.py  nwchem.py  packmol.py  phonopy.py  pwscf.py  res.py  template.py  (+2 more)
pymatgen/core/: structure.py
(+190 files in other folders)
